# Book_RAG

./: .env_example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
RAG/: main.py  test_rag.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: output_testing.ipynb
src/: constants.py  main.py  test_rag.py
src/api/: contracts.py  routes.py
src/data_processing/: ClientInputData.py
src/inference/: Model.py
src/inference/configs/: InferenceConfig.py  InferenceConfig_example.yaml
